fixed typo Strasbourg

--- a/public/index.html
+++ b/public/index.html
@@ -286,7 +286,7 @@
             <div class="layover-container ssr-right">
               <img src="img/other/welcome.jpg" class="img-logo img-responsive img-rounded ssr-right" />
               <div class="layover-bg layover-hidden"></div>
-              <div class="layover-text layover-hidden">Christmas Market &middot; Strasburg, France &middot; 2010</div>
+              <div class="layover-text layover-hidden">Christkindelsm&auml;rik &middot; Strasbourg, France &middot; 2010</div>
             </div>
           </div>
         </div>
