--- a/public/index.html
+++ b/public/index.html
@@ -343,5 +343,9 @@
           <a href="https://github.com/magni-/paulpadier.com" target="_blank"><i class="fa fa-github"></i></a> &middot; <span>Paul Mollet-Padier</span> &middot; <span>2013</span>
         </div>
     </div>
+    <a title="Web Analytics" href="http://clicky.com/100688295"><img alt="Web Analytics" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
+    <script src="//static.getclicky.com/js" type="text/javascript"></script>
+    <script type="text/javascript">try{ clicky.init(100688295); }catch(e){}</script>
+    <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/100688295ns.gif" /></p></noscript>
   </body>
 </html>
