fixed display issues #about

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html5>
-<html>
+<html lang="en">
   <head>
     <title>Paul Mollet-Padier</title>
     <!-- jquery -->
@@ -52,7 +52,7 @@
           <p>ABOUT</p>
         </div>
         <div class="row">
-          <div id="links" class="col-md-3 col-sm-5">
+          <div id="links" class="col-md-3 col-sm-5 col-xs-12">
             <ul class="fa-ul pull-left">
               <li><i class="fa fa-li fa-2x fa-github-alt"></i><a href="https://github.com/magni-" target="_blank">magni-</a></li>
               <li><i class="fa fa-li fa-2x fa-linkedin"></i><a href="http://www.linkedin.com/in/paulmolletpadier" target="_blank">paulmolletpadier</a></li>
@@ -62,12 +62,12 @@
               <li class="list-last"><i class="fa fa-li fa-2x fa-file"></i><a class="btn btn-primary" href="mollet-padier_resume.pdf">resume</a></li>
             </ul>
           </div>
-          <div id="lead" class="col-md-6 col-sm-7">
+          <div id="lead" class="col-md-6 col-sm-12">
             <p class="lead">Hey there!</p>
             <p class="lead">I&#39;m a French-American software engineering student, finishing up my studies in France and heading back to New York early in 2014.</p>
             <p class="lead">If you&#39;re making something awesome, I&#39;d love to work with you!</p>
           </div>
-          <div id="me" class="col-md-3">
+          <div id="me" class="col-md-3 col-sm-7 col-xs-12">
             <img src="img/about/profile.jpg" class="img-logo img-responsive img-circle img-profile" />
           </div>
         </div>
@@ -343,7 +343,7 @@
           <a href="https://github.com/magni-/paulpadier.com" target="_blank"><i class="fa fa-github"></i></a> &middot; <span>Paul Mollet-Padier</span> &middot; <span>2013</span>
         </div>
     </div>
-    <a title="Web Analytics" href="http://clicky.com/100688295" class="clicky"><img alt="Web Analytics" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
+    <a title="Web Analytics" href="http://clicky.com/100688295" class="hidden"><img alt="Web Analytics" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
     <script src="//static.getclicky.com/js" type="text/javascript"></script>
     <script type="text/javascript">try{ clicky.init(100688295); }catch(e){}</script>
     <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/100688295ns.gif" /></p></noscript>
