--- a/public/index.html
+++ b/public/index.html
@@ -64,8 +64,8 @@
           </div>
           <div id="lead" class="col-md-6 col-sm-12">
             <p class="lead">Hey there!</p>
-            <p class="lead">I&#39;m a French-American software engineering student, finishing up my studies in France and heading back to New York early in 2014.</p>
-            <p class="lead">If you&#39;re making something awesome, I&#39;d love to work with you!</p>
+            <p class="lead">I&#39;m a French-American software engineer just out of school and currently based in New York.</p>
+            <p class="lead">I just started a new job, but feel free to take a look or to contact me!</p>
           </div>
           <div id="me" class="col-md-3 col-sm-7 col-xs-12">
             <img src="img/about/profile.jpg" class="img-logo img-responsive img-circle img-profile" />
