--- a/public/index.html
+++ b/public/index.html
@@ -79,15 +79,31 @@
         </div>
         <div class="row subsection">
           <div class="col-md-8 ssr-left ssr-text">
+            <h2>Venmo</h2>
+            <h5>New York, NY &middot; March 2014 &ndash; present</h5>
+            <p><!-- Wooooooo! --></p>
+          </div>
+          <div class="col-md-4 ssr-right">
+            <div class="layover-container ssr-right">
+              <img src="img/work/venmo.png" class="img-logo img-responsive img-rounded ssr-right" />
+              <div class="layover-bg layover-hidden"></div>
+              <div class="layover-text layover-hidden">
+                <a href="https://venmo.com/" class="btn btn-default" role="button" target="_blank">website</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row subsection">
+          <div class="col-md-8 ssr-right ssr-text">
             <h2>Urtak</h2>
             <h5>New York, NY &middot; July 2012 &ndash; February 2013</h5>
             <p>I was the second engineer on the team, working directly with the cofounder/CTO on a <strong>Ruby on Rails</strong> application. I refined preexisting features and fully developed my own, which concerned all parts of the application. I wrote <strong>HTML/CSS</strong> and <strong>JavaScript/CoffeeScript</strong> code for the presentation tier, <strong>Ruby</strong> code for the logic tier, and used <strong>MySQL</strong> for the persistence tier.</p>
             <p>I applied agile methodologies, using <strong>Jasmine</strong> and <strong>RSpec</strong> to test the frontend and backend code respectively, and <strong>Pivotal Tracker</strong> to manage iterations. I also used <strong>Asana</strong> for project management. I worked with JavaScript libraries and Ruby gems including <strong>jQuery</strong>, <strong>Underscore</strong>, and <strong>Backbone</strong>, and <strong>Devise</strong>, <strong>Resque</strong>, <strong>Rabl</strong>, and <strong>Haml</strong>. I also used <strong>Sphinx</strong> and <strong>Redis</strong> for real-time queries where accessing the MySQL tables was too slow.</p>
             <p><em>(Urtak closed down in September 2013)</em></p>
           </div>
-          <div class="col-md-4 ssr-right">
-            <div class="layover-container ssr-right">
-              <img src="img/work/urtak.png" class="img-logo img-responsive img-rounded ssr-right" />
+          <div class="col-md-4 ssr-left">
+            <div class="layover-container ssr-left">
+              <img src="img/work/urtak.png" class="img-logo img-responsive img-rounded ssr-left" />
               <div class="layover-bg layover-hidden"></div>
               <div class="layover-text layover-hidden">
                 <a href="http://www.crunchbase.com/company/urtak" class="btn btn-default" role="button" target="_blank">crunchbase</a>
@@ -96,14 +112,14 @@
           </div>
         </div>
         <div class="row subsection">
-          <div class="col-md-8 ssr-right ssr-text">
+          <div class="col-md-8 ssr-left ssr-text">
             <h2>Corning</h2>
             <h5>Corning, NY &middot; June 2011 &ndash; August 2011</h5>
             <p>I worked as a <a href="http://www.ctg.com/" target="_blank">CTG</a> contractor for Corning's IT department and focused on three core projects: improving the RDBMS software license purchasing process; refining the Microsoft SharePoint-based internal data collection on current RBDMS software licenses; and overhauling the general software buying process for Corning employees by wireframing a new internal "Corning App Store".</p>
           </div>
-          <div class="col-md-4 ssr-left">
-            <div class="layover-container ssr-left">
-              <img src="img/work/corning.jpg" class="img-logo img-responsive img-rounded ssr-left" />
+          <div class="col-md-4 ssr-right">
+            <div class="layover-container ssr-right">
+              <img src="img/work/corning.jpg" class="img-logo img-responsive img-rounded ssr-right" />
               <div class="layover-bg layover-hidden"></div>
               <div class="layover-text layover-hidden">
                 <a href="http://www.corning.com/index.aspx" class="btn btn-default" role="button" target="_blank">website</a>
