--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html5>
 <html lang="en">
   <head>
-    <title>Paul Mollet-Padier</title>
+    <title>Paul Padier</title>
     <!-- jquery -->
     <script type="text/javascript" src="jquery/jquery-2.0.3.min.js" ></script>
     <!-- bootstrap -->
@@ -26,7 +26,7 @@
       <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
           <div class="navbar-header">
-            <span class="navbar-title">Paul Mollet-Padier</span>
+            <span class="navbar-title">Paul Padier</span>
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
@@ -55,11 +55,11 @@
           <div id="links" class="col-md-3 col-sm-5 col-xs-12">
             <ul class="fa-ul pull-left">
               <li><i class="fa fa-li fa-2x fa-github-alt"></i><a href="https://github.com/magni-" target="_blank">magni-</a></li>
-              <li><i class="fa fa-li fa-2x fa-linkedin"></i><a href="http://www.linkedin.com/in/paulmolletpadier" target="_blank">paulmolletpadier</a></li>
+              <li><i class="fa fa-li fa-2x fa-linkedin"></i><a href="http://www.linkedin.com/in/paulpadier" target="_blank">paulpadier</a></li>
               <li><i class="fa fa-li fa-2x fa-twitter"></i><a href="https://twitter.com/paulpadier" target="_blank">paulpadier</a></li>
               <li><i class="fa fa-li fa-2x fa-skype"></i><a href="skype:paul.padier?add" target="_blank">paul.padier</a></li>
-              <li><i class="fa fa-li fa-2x fa-envelope"></i><a href="mailto:paul.mollet-padier@outlook.com" target="_blank">paul.mollet-padier@outlook.com</a></li>
-              <li class="list-last"><i class="fa fa-li fa-2x fa-file"></i><a class="btn btn-primary" href="mollet-padier_resume.pdf">resume</a></li>
+              <li><i class="fa fa-li fa-2x fa-envelope"></i><a href="mailto:paul.padier@outlook.com" target="_blank">paul.padier@outlook.com</a></li>
+              <li class="list-last"><i class="fa fa-li fa-2x fa-file"></i><a class="btn btn-primary" href="paul_padier_resume.pdf">resume</a></li>
             </ul>
           </div>
           <div id="lead" class="col-md-6 col-sm-12">
