Update top copy

--- a/public/index.html
+++ b/public/index.html
@@ -64,8 +64,8 @@
           </div>
           <div id="lead" class="col-md-6 col-sm-12">
             <p class="lead">Hey there!</p>
-            <p class="lead">I&#39;m a French-American software engineer just out of school and currently based in New York.</p>
-            <p class="lead">I just started a new job, but feel free to take a look or to contact me!</p>
+            <p class="lead">I&#39;m a French-American software engineer working at Venmo in New York.</p>
+            <p class="lead">If you want to come work with me or just get to know me, feel free to reach out!</p>
           </div>
           <div id="me" class="col-md-3 col-sm-7 col-xs-12">
             <img src="img/about/profile.jpg" class="img-logo img-responsive img-circle img-profile" />
