Update name and year in footer

--- a/public/index.html
+++ b/public/index.html
@@ -357,7 +357,7 @@
           <span>made with<a href="http://getbootstrap.com/" target="_blank"><i class="fa fa-twitter"></i>Bootstrap</a> and<a href="http://fortawesome.github.io/Font-Awesome/" target="_blank"><i class="fa fa-flag"></i>Font Awesome</a></span>
         </div>
         <div class="foot-right">
-          <a href="https://github.com/magni-/paulpadier.com" target="_blank"><i class="fa fa-github"></i></a> &middot; <span>Paul Mollet-Padier</span> &middot; <span>2014</span>
+          <a href="https://github.com/magni-/paulpadier.com" target="_blank"><i class="fa fa-github"></i></a> &middot; <span>Paul Padier</span> &middot; <span>2015</span>
         </div>
     </div>
     <a title="Web Analytics" href="http://clicky.com/100688295" class="hidden"><img alt="Web Analytics" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
