Degree no longer expected
Should have updated this over a year ago...

--- a/public/index.html
+++ b/public/index.html
@@ -138,7 +138,7 @@
             <h2>University of Technology of Belfort-Montb&eacute;liard</h2>
             <h5>Belfort, France &middot; Since September 2009</h5>
             <p class="center-mobile">
-              <strong>M.S. Software Engineering</strong> &middot; Degree expected June 2014<br />
+              <strong>M.S. Software Engineering</strong> &middot; November 2014<br />
               <strong>B.S. Computer Science</strong> &middot; June 2013
             </p>
             <p class="center-mobile">Computer Science Department</p>
