Fix UTBM timestamp update

--- a/public/index.html
+++ b/public/index.html
@@ -136,7 +136,7 @@
         <div class="row subsection">
           <div class="col-md-8 ssr-left ssr-text">
             <h2>University of Technology of Belfort-Montb&eacute;liard</h2>
-            <h5>Belfort, France &middot; Since September 2009</h5>
+            <h5>Belfort, France &middot; September 2009 - September 2014</h5>
             <p class="center-mobile">
               <strong>M.S. Software Engineering</strong> &middot; November 2014<br />
               <strong>B.S. Computer Science</strong> &middot; June 2013
