--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
           </div>
           <div id="lead" class="col-md-6 col-sm-12">
             <p class="lead">Hey there!</p>
-            <p class="lead">I&#39;m a French-American software engineer working at Venmo in New York.</p>
+            <p class="lead">I&#39;m a French-American software engineer working remotely for Venmo from Tokyo, Japan.</p>
             <p class="lead">If you want to come work with me or just get to know me, feel free to reach out!</p>
           </div>
           <div id="me" class="col-md-3 col-sm-7 col-xs-12">
