Add Venmo work description

--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,14 @@
           <div class="col-md-8 ssr-left ssr-text">
             <h2>Venmo</h2>
             <h5>New York, NY &middot; March 2014 &ndash; present</h5>
-            <p><!-- Wooooooo! --></p>
+            <p>I work on the <strong>Django</strong> app as part of the platform team. Over the past couple years, I've gotten to work on all sorts of different projects such as:</p>
+            <ul>
+              <li>revamping our user search with <strong>ElasticSearch</strong></li>
+              <li>integrating with third-party APIs to make linking a bank account to Venmo a more seamless process</li>
+              <li>overhauling our friendship and user request logic, designing everything from the <strong>Cassandra</strong> and <strong>MySQL</strong> schemas up to the <strong>RESTful API</strong> consumed by internal and external clients</li>
+              <li>re-architecting our funding source schema, logic, and API, and migrating existing data into the new model
+              as part of a team of three developers, building the backend foundation for <a href="https://venmo.com/paywithvenmo" target="_blank" title="Pay with Venmo">Pay with Venmo</a></li>
+            </ul>
           </div>
           <div class="col-md-4 ssr-right">
             <div class="layover-container ssr-right">
