--- a/public/index.html
+++ b/public/index.html
@@ -64,8 +64,8 @@
           </div>
           <div id="lead" class="col-md-6 col-sm-12">
             <p class="lead">Hey there!</p>
-            <p class="lead">I&#39;m a French-American software engineer working remotely for Venmo from Tokyo, Japan.</p>
-            <p class="lead">If you want to come work with me or just get to know me, feel free to reach out!</p>
+            <p class="lead">I&#39;m a French-American software engineer working out of Tokyo, Japan.</p>
+            <p class="lead">If you want to work with me or just get to know me, feel free to reach out!</p>
           </div>
           <div id="me" class="col-md-3 col-sm-7 col-xs-12">
             <img src="img/about/profile.jpg" class="img-logo img-responsive img-circle img-profile" />
@@ -80,13 +80,13 @@
         <div class="row subsection">
           <div class="col-md-8 ssr-left ssr-text">
             <h2>Venmo</h2>
-            <h5>New York, NY &middot; March 2014 &ndash; present</h5>
-            <p>I work on the <strong>Django</strong> app as part of the platform team. Over the past couple years, I've gotten to work on all sorts of different projects such as:</p>
+            <h5>New York, NY &middot; March 2014 &ndash; March 2016</h5>
+            <p>I worked on the <strong>Django</strong> app as part of the platform team. During my two years at Venmo, I got to work on all sorts of different projects such as:</p>
             <ul>
-              <li>revamping our user search with <strong>ElasticSearch</strong></li>
+              <li>revamping Venmo's user search with <strong>ElasticSearch</strong></li>
               <li>integrating with third-party APIs to make linking a bank account to Venmo a more seamless process</li>
-              <li>overhauling our friendship and user request logic, designing everything from the <strong>Cassandra</strong> and <strong>MySQL</strong> schemas up to the <strong>RESTful API</strong> consumed by internal and external clients</li>
-              <li>re-architecting our funding source schema, logic, and API, and migrating existing data into the new model
+              <li>overhauling Venmo's friendship and user request logic, designing everything from the <strong>Cassandra</strong> and <strong>MySQL</strong> schemas up to the <strong>RESTful API</strong> consumed by internal and external clients</li>
+              <li>re-architecting Venmo's funding source schema, logic, and API, and migrating existing data into the new model
               as part of a team of three developers, building the backend foundation for <a href="https://venmo.com/paywithvenmo" target="_blank" title="Pay with Venmo">Pay with Venmo</a></li>
             </ul>
           </div>
