Add link to StackOverflow profile

--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,7 @@
           <div id="links" class="col-md-3 col-sm-5 col-xs-12">
             <ul class="fa-ul pull-left">
               <li><i class="fa fa-li fa-2x fa-github-alt"></i><a href="https://github.com/magni-" target="_blank">magni-</a></li>
+              <li><i class="fa fa-li fa-2x fa-stack-overflow"></i><a href="http://stackoverflow.com/users/1612744/magni-" target="_blank">magni-</a></li>
               <li><i class="fa fa-li fa-2x fa-linkedin"></i><a href="http://www.linkedin.com/in/paulpadier" target="_blank">paulpadier</a></li>
               <li><i class="fa fa-li fa-2x fa-twitter"></i><a href="https://twitter.com/paulpadier" target="_blank">paulpadier</a></li>
               <li><i class="fa fa-li fa-2x fa-skype"></i><a href="skype:paul.padier?add" target="_blank">paul.padier</a></li>
