Remove orphaned classes

--- a/public/index.html
+++ b/public/index.html
@@ -92,8 +92,8 @@
             </ul>
           </div>
           <div class="col-md-4 ssr-right">
-            <div class="layover-container ssr-right">
-              <img src="img/work/venmo.png" class="img-logo img-responsive img-rounded ssr-right" />
+            <div class="layover-container">
+              <img src="img/work/venmo.png" class="img-logo img-responsive img-rounded" />
               <div class="layover-bg layover-hidden"></div>
               <div class="layover-text layover-hidden">
                 <a href="https://venmo.com/" class="btn btn-default" role="button" target="_blank">website</a>
@@ -110,8 +110,8 @@
             <p><em>(Urtak closed down in September 2013)</em></p>
           </div>
           <div class="col-md-4 ssr-left">
-            <div class="layover-container ssr-left">
-              <img src="img/work/urtak.png" class="img-logo img-responsive img-rounded ssr-left" />
+            <div class="layover-container">
+              <img src="img/work/urtak.png" class="img-logo img-responsive img-rounded" />
               <div class="layover-bg layover-hidden"></div>
               <div class="layover-text layover-hidden">
                 <a href="http://www.crunchbase.com/company/urtak" class="btn btn-default" role="button" target="_blank">crunchbase</a>
@@ -126,8 +126,8 @@
             <p>I worked as a <a href="http://www.ctg.com/" target="_blank">CTG</a> contractor for Corning's IT department and focused on three core projects: improving the RDBMS software license purchasing process; refining the Microsoft SharePoint-based internal data collection on current RBDMS software licenses; and overhauling the general software buying process for Corning employees by wireframing a new internal "Corning App Store".</p>
           </div>
           <div class="col-md-4 ssr-right">
-            <div class="layover-container ssr-right">
-              <img src="img/work/corning.jpg" class="img-logo img-responsive img-rounded ssr-right" />
+            <div class="layover-container">
+              <img src="img/work/corning.jpg" class="img-logo img-responsive img-rounded" />
               <div class="layover-bg layover-hidden"></div>
               <div class="layover-text layover-hidden">
                 <a href="http://www.corning.com/index.aspx" class="btn btn-default" role="button" target="_blank">website</a>
