--- a/public/index.html
+++ b/public/index.html
@@ -80,10 +80,26 @@
         </div>
         <div class="row subsection">
           <div class="col-md-8 ssr-left ssr-text">
+            <h2>Rainforest QA</h2>
+            <h5>San Francisco, CA <em>(working remote from Tokyo, Japan)</em> &middot; May 2016 &ndash; present</h5>
+            <p>I work here now!</p>
+          </div>
+          <div class="col-md-4 ssr-right">
+            <div class="layover-container">
+              <img src="img/work/rainforest.png" class="img-logo img-responsive img-rounded" />
+              <div class="layover-bg layover-hidden"></div>
+              <div class="layover-text layover-hidden">
+                <a href="https://www.rainforestqa.com/" class="btn btn-default" role="button" target="_blank">website</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row subsection">
+          <div class="col-md-8 ssr-right ssr-text">
             <h2>Venmo</h2>
             <h5>New York, NY &middot; March 2014 &ndash; March 2016</h5>
             <p>I worked on the <strong>Django</strong> app as part of the platform team. During my two years at Venmo, I got to work on all sorts of different projects such as:</p>
-            <ul>
+            <ul class="text-left">
               <li>revamping Venmo's user search with <strong>ElasticSearch</strong></li>
               <li>integrating with third-party APIs to make linking a bank account to Venmo a more seamless process</li>
               <li>overhauling Venmo's friendship and user request logic, designing everything from the <strong>Cassandra</strong> and <strong>MySQL</strong> schemas up to the <strong>RESTful API</strong> consumed by internal and external clients</li>
@@ -91,7 +107,7 @@
               as part of a team of three developers, building the backend foundation for <a href="https://venmo.com/paywithvenmo" target="_blank" title="Pay with Venmo">Pay with Venmo</a></li>
             </ul>
           </div>
-          <div class="col-md-4 ssr-right">
+          <div class="col-md-4 ssr-left">
             <div class="layover-container">
               <img src="img/work/venmo.png" class="img-logo img-responsive img-rounded" />
               <div class="layover-bg layover-hidden"></div>
@@ -102,14 +118,14 @@
           </div>
         </div>
         <div class="row subsection">
-          <div class="col-md-8 ssr-right ssr-text">
+          <div class="col-md-8 ssr-left ssr-text">
             <h2>Urtak</h2>
             <h5>New York, NY &middot; July 2012 &ndash; February 2013</h5>
             <p>I was the second engineer on the team, working directly with the cofounder/CTO on a <strong>Ruby on Rails</strong> application. I refined preexisting features and fully developed my own, which concerned all parts of the application. I wrote <strong>HTML/CSS</strong> and <strong>JavaScript/CoffeeScript</strong> code for the presentation tier, <strong>Ruby</strong> code for the logic tier, and used <strong>MySQL</strong> for the persistence tier.</p>
             <p>I applied agile methodologies, using <strong>Jasmine</strong> and <strong>RSpec</strong> to test the frontend and backend code respectively, and <strong>Pivotal Tracker</strong> to manage iterations. I also used <strong>Asana</strong> for project management. I worked with JavaScript libraries and Ruby gems including <strong>jQuery</strong>, <strong>Underscore</strong>, and <strong>Backbone</strong>, and <strong>Devise</strong>, <strong>Resque</strong>, <strong>Rabl</strong>, and <strong>Haml</strong>. I also used <strong>Sphinx</strong> and <strong>Redis</strong> for real-time queries where accessing the MySQL tables was too slow.</p>
             <p><em>(Urtak closed down in September 2013)</em></p>
           </div>
-          <div class="col-md-4 ssr-left">
+          <div class="col-md-4 ssr-right">
             <div class="layover-container">
               <img src="img/work/urtak.png" class="img-logo img-responsive img-rounded" />
               <div class="layover-bg layover-hidden"></div>
@@ -120,12 +136,12 @@
           </div>
         </div>
         <div class="row subsection">
-          <div class="col-md-8 ssr-left ssr-text">
+          <div class="col-md-8 ssr-right ssr-text">
             <h2>Corning</h2>
             <h5>Corning, NY &middot; June 2011 &ndash; August 2011</h5>
             <p>I worked as a <a href="http://www.ctg.com/" target="_blank">CTG</a> contractor for Corning's IT department and focused on three core projects: improving the RDBMS software license purchasing process; refining the Microsoft SharePoint-based internal data collection on current RBDMS software licenses; and overhauling the general software buying process for Corning employees by wireframing a new internal "Corning App Store".</p>
           </div>
-          <div class="col-md-4 ssr-right">
+          <div class="col-md-4 ssr-left">
             <div class="layover-container">
               <img src="img/work/corning.jpg" class="img-logo img-responsive img-rounded" />
               <div class="layover-bg layover-hidden"></div>
