--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,7 @@
             <p>I work here now!</p>
           </div>
           <div class="col-md-4 ssr-right">
-            <div class="layover-container">
+            <div class="layover-container ssr-right">
               <img src="img/work/rainforest.png" class="img-logo img-responsive img-rounded" />
               <div class="layover-bg layover-hidden"></div>
               <div class="layover-text layover-hidden">
@@ -108,7 +108,7 @@
             </ul>
           </div>
           <div class="col-md-4 ssr-left">
-            <div class="layover-container">
+            <div class="layover-container ssr-left">
               <img src="img/work/venmo.png" class="img-logo img-responsive img-rounded" />
               <div class="layover-bg layover-hidden"></div>
               <div class="layover-text layover-hidden">
@@ -126,7 +126,7 @@
             <p><em>(Urtak closed down in September 2013)</em></p>
           </div>
           <div class="col-md-4 ssr-right">
-            <div class="layover-container">
+            <div class="layover-container ssr-right">
               <img src="img/work/urtak.png" class="img-logo img-responsive img-rounded" />
               <div class="layover-bg layover-hidden"></div>
               <div class="layover-text layover-hidden">
@@ -142,7 +142,7 @@
             <p>I worked as a <a href="http://www.ctg.com/" target="_blank">CTG</a> contractor for Corning's IT department and focused on three core projects: improving the RDBMS software license purchasing process; refining the Microsoft SharePoint-based internal data collection on current RBDMS software licenses; and overhauling the general software buying process for Corning employees by wireframing a new internal "Corning App Store".</p>
           </div>
           <div class="col-md-4 ssr-left">
-            <div class="layover-container">
+            <div class="layover-container ssr-left">
               <img src="img/work/corning.jpg" class="img-logo img-responsive img-rounded" />
               <div class="layover-bg layover-hidden"></div>
               <div class="layover-text layover-hidden">
