Switch to HTTPS links for font/css

--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
   <head>
     <title>Paul Padier</title>
     <!-- fonts -->
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=ABeeZee:400,700" />
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=ABeeZee:400,700" />
     <link rel="stylesheet" type="text/css" href="fontawesome/css/font-awesome.min.css" />
     <!-- css -->
-    <link href="http://thomasf.github.io/solarized-css/solarized-dark.min.css" rel="stylesheet"></link>
+    <link rel="stylesheet" type="text/css" href="https://thomasf.github.io/solarized-css/solarized-dark.min.css" />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <!-- meta -->
     <meta charset="UTF-8" />
