Update work info

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <h1>Hi.</h1>
-    <p>I'm Paul. I'm a software engineer at <a href="https://rainforestqa.com" target="_blank">Rainforest QA</a> working from my home in Japan.</p>
+    <p>I'm Paul. I'm a software engineer at <a href="https://atob.com" target="_blank">AtoB</a> working from my home in Japan. Prior to that I worked at <a href="https://rainforestqa.com" target="_blank">Rainforest QA</a> and <a href="https://venmo.com" target="_blank">Venmo</a>.</p>
     <p>For the curious, here are links to my <a href="https://github.com/magni-" target="_blank">GitHub</a> and <a href="http://stackoverflow.com/users/1612744/magni-" target="_blank">StackOverflow</a> profiles.</p>
     <p>I also <small>(very infrequently)</small> publish blog posts on <a href="https://paul.codes" target="_blank">my blog</a>.</p>
     <p>You can find my email in <a href="https://github.com/magni-/paulpadier.com/commit/HEAD.patch" target="_blank">my commits</a>.</p>
